updated examples with csv files

--- a/Planck_example.ipynb
+++ b/Planck_example.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bf93b829-1d67-47ec-b199-76264f50efa3",
    "metadata": {},
    "outputs": [
@@ -38,12 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "fb9006f6-6eec-4799-9539-79981df8a111",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -54,12 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cl_cib = np.loadtxt('./outputs/cl_CIB_lmin'+str(ell_min)+'_lmax'+str(ell_max)+'.txt')"
+    "cl_cib = pd.read_csv('./outputs/cl_cib_ellmin'+str(ell_min)+'_ellmax'+str(ell_max)+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "c4f2acf8-2d99-4aa0-ab17-6bb982515e5b",
    "metadata": {},
    "outputs": [
@@ -102,7 +101,7 @@
     "        if (i, j) in data_indices:\n",
     "            index = data_indices[(i, j)]\n",
     "            axs[i, j].set_title(title[index], fontsize=55)\n",
-    "            axs[i, j].plot(ell, ell*cl_cib[index,:], color='black', lw=3)\n",
+    "            axs[i, j].plot(ell, ell*cl_cib[headers[index]], color='black', lw=3)\n",
     "            \n",
     "            if i == nrows - 1: \n",
     "                axs[i, j].set_xlabel(r'$\\ell$', fontsize=45)\n",
