--- a/SPIRE_example.ipynb
+++ b/SPIRE_example.ipynb
@@ -43,23 +43,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8da087df-b351-4eec-b1b1-b7c9f77f596f",
+   "execution_count": 3,
+   "id": "208051de-39a0-44c5-a4aa-9a8e2950b96c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cl_cib = np.loadtxt('./outputs/cl_CIB_lmin'+str(ell_min)+'_lmax'+str(ell_max)+'.txt')"
+    "cl_cib = pd.read_csv('./outputs/cl_cib_ellmin'+str(ell_min)+'_ellmax'+str(ell_max)+'.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c4f2acf8-2d99-4aa0-ab17-6bb982515e5b",
    "metadata": {},
    "outputs": [
@@ -100,7 +99,7 @@
     "        if (i, j) in data_indices:\n",
     "            index = data_indices[(i, j)]\n",
     "            axs[i, j].set_title(title[index], fontsize=55)\n",
-    "            axs[i, j].plot(ell, cl_cib[index,:], color='black', lw=3)\n",
+    "            axs[i, j].plot(ell, cl_cib[headers[index]], color='black', lw=3)\n",
     "            axs[i, j].loglog()\n",
     "            if i == nrows - 1: \n",
     "                axs[i, j].set_xlabel(r'$\\ell$', fontsize=45)\n",
